--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<div class="w3menu navbar-left">
 							<ul class="nav navbar">
 								<li><a href="index.html" class="active">Accueil</a></li>
-								<li><a href="Qui somme nous.html">Qui somme nous</a></li> 
+								<li><a href="Qui somme nous.html">Qui sommes nous</a></li> 
 								<li><a href="Nos robes.html">Nos robes</a></li>
 								<li> <a href="xlagenda/index.php" onclick="window.open(this.href); return false;">Prendre rendez-vous</a>
 								</li>  
@@ -124,7 +124,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div class="top-nav bottom-w3lnav">
 				<ul>
 					<li><a href="index.html">Accueil</a></li>
-					<li><a href="Qui somme nous.html">Qui somme nous</a></li> 
+					<li><a href="Qui somme nous.html">Qui sommes nous</a></li> 
 					<li><a href="Nos robes.html">Nos robes</a></li> 
 					<li> <a href="xlagenda/index.php" onclick="window.open(this.href); return false;">Prendre rendez-vous</a>
 								</li> 
